--- a/Projekti 2/Styles/styles.css
+++ b/Projekti 2/Styles/styles.css
@@ -1,16 +1,20 @@
 body {
     background-color: #2E4F3D;
-    color: #eee5d3;
     font-family: Garamond serif ;
     font-size: large;
+    color: antiquewhite;
 }
 #logo {
-    text-align: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 0px;
 }
 
 h1 {
     text-align: center;
     font-family: Georgia serif;
+    color: antiquewhite;
 }
 
 #navi {
@@ -25,10 +29,9 @@ h1 {
 
 .nav-button.haku-button {
     background-color: #6B8F71;
-    padding: 10px;
+    padding: 14px;
     border-radius: 60px;
     text-align: center;
-    color: #b7cdeb;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,8 +43,7 @@ h1 {
     padding: 40px;
     margin: 10px;
     border-radius: 60px;
-    text-align: center;
-    color: #b7cdeb;
+    text-align: center;    
 }
 
 .hakuwrapper {
@@ -62,12 +64,12 @@ form {
 }
 
 .hakukentta {
-    color: #5A7CA8;
+    color: #b7cdeb;
     outline: none;
     border: none;
     background: transparent;
     width: 300px;
-    font-size: medium;
+    font-size: large;
     margin: 4px;
 }
 
@@ -80,13 +82,8 @@ form {
     margin-left: 5px;
 }
 
-a:hover {
-    color: #5A7CA8;
-}
-
 footer {
     text-align: center;
     position: sticky;
     bottom: 0;
 }
-
