--- a/Projekti 2/Styles/styles.css
+++ b/Projekti 2/Styles/styles.css
@@ -3,7 +3,9 @@ body {
     font-family: Garamond serif ;
     font-size: large;
     color: antiquewhite;
+    text-align: center;
 }
+
 #logo {
     width: 100%;
     max-width: 1300px;
@@ -15,33 +17,59 @@ body {
 }
 
 h1 {
-    text-align: center;
     font-family: Georgia serif;
     color: antiquewhite;
+    margin-bottom: 70px;
 }
 
 #navi {
     padding: 20px;
-    text-align: center;
     font-size: x-large;
 }
 
-#hakuotsikko {
-    margin: 0px;
+#hakuvalinta {
+    align-items: center;
+    justify-content: center;
 }
 
-.nav-button.haku-button {
+#titlewrapper,
+#authorwrapper {
+    background-color: #6B8F71;
+    padding: 10px;
+    border-radius: 60px;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    margin: 20px;
+}
+
+
+#titleBtn,
+#authorBtn {
+    background-color: transparent;
+    border: none;
+    color: antiquewhite;
+}
+
+
+.hakutyyppiBtn.active {
+    font-weight: bold;
+}
+
+
+#hakuotsikko {
+    margin-bottom: 2px;
+}
+
+#haku-button {
     background-color: #6B8F71;
     padding: 14px;
     border-radius: 60px;
     text-align: center;
-    display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 4px;
+    justify-content: center;
 }
-
-
 
 .hakuwrapper {
     display: flex;
@@ -56,19 +84,18 @@ h1 {
 
 form {
     width: 100%;
-    display: flex;
     justify-content: center;
 }
 
 .hakukentta {
-    color: #b7cdeb;
+    color: #5a7ca8bd;
     outline: none;
     border: none;
     background: transparent;
     width: 100%;
     max-width: 300px;
     font-size: large;
-    margin: 4px;
+    margin: 6px;
 }
 
 .hakukentta::placeholder {
@@ -78,11 +105,14 @@ form {
 .search-icon {
     color: #5a7ca8bd;
     margin-left: 5px;
+    background-color: transparent;
+    border: none;
 }
 
+
 #tulokset {
-  overflow-x: auto;
-  width: 100%;
+    overflow-x: auto;
+    width: 100%;
 }
 
 .kirjataulu {
@@ -100,7 +130,7 @@ form {
     padding: 35px;
     margin: 35px;
     text-align: left;
-    font-size: large;
+    font-size: x-large;
     overflow-wrap: break-word;
 }
 
@@ -129,46 +159,117 @@ form {
 }
 
 footer {
-    text-align: center;
+    margin-top: 40px;
+
     position: sticky;
     bottom: 0;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 820px) {
     body {
         font-size: medium;
         padding: 10px;
     }
 
-    h1 {
-        font-size: large;
-        text-align: center;
-    }
-
-    #logo img{
+    #logo img {
         max-width: 70%;
     }
 
+    h1 {
+        text-align: center;
+    }
+
+    #titlewrapper,
+    #authorwrapper {
+        width: 20%;
+        margin: 10px;
+        padding: 5px;
+    }
+
+    #titleBtn,
+    #authorBtn,
+    #hakuotsikko {
+        font-size: large;
+    }
+
+    #haku-button {
+        width: 70%;
+    }
+
     .hakuwrapper {
-        flex-direction: column;
-        max-width: 100%;
-        padding: 10px;
+
+        max-width: 90%;
     }
 
     .hakukentta {
         width: 100%;
-        font-size: small;
+        font-size: medium;
         margin: 8px;
     }
     .kirjataulu {
         width: 100%;
-        font-size: small;
+        font-size: medium;
         overflow-x: auto;
         display: block;
     }
 
     .kirjataulu th,
     .kirjataulu td {
-        font-size: small;
+        font-size: medium;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    body {
+        font-size: medium;
+        padding: 10px;
+    }
+
+    #logo img {
+        max-width: 70%;
+    }
+
+    h1 {
+        font-size: large;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    #titlewrapper,
+    #authorwrapper {
+        margin: 10px;
+        padding: 5px;
+        width: 100%;
+    }
+
+    #titleBtn,
+    #authorBtn,
+    #hakuotsikko {
+        font-size: medium;
+    }
+
+    #haku-button {
+        width: 100%;
+    }
+
+    .hakuwrapper {
+        max-width: 90%;
+    }
+
+    .hakukentta {
+        width: 100%;
+        font-size: medium;
+        margin: 8px;
+    }
+    .kirjataulu {
+        width: 100%;
+        font-size: medium;
+        overflow-x: auto;
+        display: block;
+    }
+
+    .kirjataulu th,
+    .kirjataulu td {
+        font-size: medium;
     }
 }
